tests/fixtures/invalid/pow_str_int_dict.py
# Cannot call pow() with Str, Int, Dict[str, int]
x = pow("hello", 1, {"a": 1})
